# temptrack

components/esp32-ds18b20/: CMakeLists.txt
components/readtemp/: CMakeLists.txt  readtemp.c  readtemp.c.multi  readtemp.h
main/: CMakeLists.txt  Kconfig.projbuild  iothub.c  iothub_client_sample_mqtt.h  main.c  temp.h
